removed unused classes + refactored ProcessHelper