@@ -37,9 +37,9 @@ package ch.niceideas.common.utils;
 import ch.niceideas.common.exceptions.CommonBusinessException;
 import org.apache.log4j.Logger;
 
-import java.io.BufferedReader;
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-import java.io.InputStreamReader;
+import java.nio.charset.StandardCharsets;
 
 
 public class ProcessHelper {
@@ -50,7 +50,7 @@ public class ProcessHelper {
 
     public String exec(String cmd) {
         try {
-            return exec(cmd, false);
+            return exec(cmd.split(" +"), false);
         } catch (ProcessHelperException e) {
             logger.error (e, e);
         }
@@ -58,48 +58,35 @@ public class ProcessHelper {
     }
 
     public String exec(String[] cmd, boolean throwExceptions) throws ProcessHelperException {
-        try {
-            Process proc = Runtime.getRuntime().exec(cmd);
-            return execProc (proc, throwExceptions);
-        } catch (IOException e) {
-            logger.error (e, e);
-            throw new ProcessHelperException (e.getMessage(), e);
-        }
+        return execProc (new ProcessBuilder(cmd), throwExceptions);
     }
-    
+
     public String exec(String cmd, boolean throwExceptions) throws ProcessHelperException {
-        try {
-            Process proc = Runtime.getRuntime().exec(cmd);
-            return execProc (proc, throwExceptions);
-        } catch (IOException e) {
-            logger.error (e, e);
-            throw new ProcessHelperException (e.getMessage(), e);
-        }
+        return execProc (new ProcessBuilder(cmd.split(" +")), throwExceptions);
     }
-    
-    private String execProc(Process proc, boolean throwExceptions) throws ProcessHelperException {
+
+    private String execProc(ProcessBuilder pb, boolean throwExceptions) throws ProcessHelperException {
         try {
 
-            String line;
+            Process proc = pb.start();
 
-            /*- standard input -*/
-            BufferedReader input = new BufferedReader(new InputStreamReader(proc.getInputStream()));
+            int returnCode;
             StringBuilder outputBuilder = new StringBuilder();
-            while ((line = input.readLine()) != null) {
 
-                outputBuilder.append (line);
-                outputBuilder.append ("\n");
+            try (ByteArrayOutputStream baosIn = new ByteArrayOutputStream();
+                 ByteArrayOutputStream baosErr = new ByteArrayOutputStream()) {
+
+                try (PumpThread ignoredIn = new PumpThread(proc.getInputStream(), baosIn);
+                     PumpThread ignoredErr = new PumpThread(proc.getErrorStream(), baosErr)) {
+
+                    returnCode = proc.waitFor();
+                }
+
+                outputBuilder.append(baosIn.toString(StandardCharsets.UTF_8));
+                outputBuilder.append(baosErr.toString(StandardCharsets.UTF_8));
             }
 
-            /*- error -*/
-            BufferedReader error = new BufferedReader(new InputStreamReader(proc.getErrorStream()));
-            while ((line = error.readLine()) != null) {
-
-                outputBuilder.append(line);
-                outputBuilder.append("\n");
-            }
-
-            int returnCode = proc.waitFor();
+            proc.destroy();
 
             if (throwExceptions && returnCode != 0) {
                 if (outputBuilder.length() > 0) {
@@ -111,11 +98,17 @@ public class ProcessHelper {
 
             return outputBuilder.toString();
 
-        } catch (Exception e) {
+        } catch (IOException e) {
             logger.error (e, e);
+            throw new ProcessHelperException (e.getMessage(), e);
+
+        } catch (InterruptedException e) {
+            logger.error (e, e);
+            Thread.currentThread().interrupt();
             throw new ProcessHelperException (e.getMessage(), e);
         }
     }
+
 
     public static class ProcessHelperException extends CommonBusinessException {
 
